compiler/tests/success/otbn/intrinsic_bn_add.jazz
export
fn bn_add(reg u256 arg0 arg1) -> reg u256 {
    reg u256 x;
    ?{}, x = #BN_ADD(arg0, arg1);
    ?{}, x = #BN_ADD(x, arg1 << 0);
    ?{}, x = #BN_ADD(x, arg1 << 8);
    ?{}, x = #BN_ADD(x, arg1 << 16);
    ?{}, x = #BN_ADD(x, arg1 << 248);

    ?{}, x = #BN_ADD_FG0(x, arg1);

    ?{}, x = #BN_ADD_FG1(x, arg1);
    ?{}, x = #BN_ADD_FG1(x, arg1 << 0);
    ?{}, x = #BN_ADD_FG1(x, arg1 << 8);
    ?{}, x = #BN_ADD_FG1(x, arg1 << 16);
    ?{}, x = #BN_ADD_FG1(x, arg1 << 248);

    return x;
}
