compiler/tests/fail/arm-m4/intrinsic_smla_hwS.jazz
export
fn smla_hw(reg u32 x y acc) -> reg u32 {
    reg u32 r;
    ?{}, r = #SMLABBS(x, y, acc);
    r = r;
    return r;
}
